Spacing fix

--- a/src/resources/sass/components/_cart-icon.scss
+++ b/src/resources/sass/components/_cart-icon.scss
@@ -120,7 +120,7 @@ a.product-cart__item {
 
 .product-cart + .block {
 	@media screen and (min-width: $screen-sm + 1) and (max-width: $screen-sm-max){
-		margin-top: 62px;
+		margin-top: 50px;
 	}
 }
 
